--- a/src/pages/side-notes/index.astro
+++ b/src/pages/side-notes/index.astro
@@ -63,13 +63,13 @@ import Layout from "../../layouts/Page.astro";
     }
 
     blockquote:before {
-        content: "\f10d";
+        content: "\"";
         margin: 1em 1em 0 0;
         right: 100%;
     }
 
     blockquote:after {
-        content: "\f10e";
+        content: "\"";
         margin: 0 0 1em 1em;
         left: 100%;
     }
