Fix: Set base path for links and icons to ensure correct loading

--- a/src/components/head/BaseHead.astro
+++ b/src/components/head/BaseHead.astro
@@ -11,28 +11,28 @@ const metaInfo = await getEntry( 'metaheadinfo', 'metainfo');
 <meta charset="UTF-8" />
 <meta name="viewport" content="width=device-width" />
 <ViewTransitions />
-<link rel="apple-touch-icon" sizes="57x57" href="/apple-icon-57x57.png" />
-<link rel="apple-touch-icon" sizes="60x60" href="/apple-icon-60x60.png" />
-<link rel="apple-touch-icon" sizes="72x72" href="/apple-icon-72x72.png" />
-<link rel="apple-touch-icon" sizes="76x76" href="/apple-icon-76x76.png" />
-<link rel="apple-touch-icon" sizes="114x114" href="/apple-icon-114x114.png" />
-<link rel="apple-touch-icon" sizes="120x120" href="/apple-icon-120x120.png" />
-<link rel="apple-touch-icon" sizes="144x144" href="/apple-icon-144x144.png" />
-<link rel="apple-touch-icon" sizes="152x152" href="/apple-icon-152x152.png" />
-<link rel="apple-touch-icon" sizes="180x180" href="/apple-icon-180x180.png" />
+<link rel="apple-touch-icon" sizes="57x57" href="/tribute-to-Ralph-Modejski/apple-icon-57x57.png" />
+<link rel="apple-touch-icon" sizes="60x60" href="/tribute-to-Ralph-Modejski/apple-icon-60x60.png" />
+<link rel="apple-touch-icon" sizes="72x72" href="/tribute-to-Ralph-Modejski/apple-icon-72x72.png" />
+<link rel="apple-touch-icon" sizes="76x76" href="/tribute-to-Ralph-Modejski/apple-icon-76x76.png" />
+<link rel="apple-touch-icon" sizes="114x114" href="/tribute-to-Ralph-Modejski/apple-icon-114x114.png" />
+<link rel="apple-touch-icon" sizes="120x120" href="/tribute-to-Ralph-Modejski/apple-icon-120x120.png" />
+<link rel="apple-touch-icon" sizes="144x144" href="/tribute-to-Ralph-Modejski/apple-icon-144x144.png" />
+<link rel="apple-touch-icon" sizes="152x152" href="/tribute-to-Ralph-Modejski/apple-icon-152x152.png" />
+<link rel="apple-touch-icon" sizes="180x180" href="/tribute-to-Ralph-Modejski/apple-icon-180x180.png" />
 <link
 	rel="icon"
 	type="image/png"
 	sizes="192x192"
 	href="/android-icon-192x192.png"
 />
-<link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png" />
-<link rel="icon" type="image/png" sizes="96x96" href="/favicon-96x96.png" />
-<link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png" />
-<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+<link rel="icon" type="image/png" sizes="32x32" href="/tribute-to-Ralph-Modejski/favicon-32x32.png" />
+<link rel="icon" type="image/png" sizes="96x96" href="/tribute-to-Ralph-Modejski/favicon-96x96.png" />
+<link rel="icon" type="image/png" sizes="16x16" href="/tribute-to-Ralph-Modejski/favicon-16x16.png" />
+<link rel="icon" type="image/svg+xml" href="/tribute-to-Ralph-Modejski/favicon.svg" />
 <link rel="manifest" href="/tribute-to-Ralph-Modejski/manifest.json" />
 <meta name="msapplication-TileColor" content="#ffffff" />
-<meta name="msapplication-TileImage" content="/ms-icon-144x144.png" />
+<meta name="msapplication-TileImage" content="/tribute-to-Ralph-Modejski/ms-icon-144x144.png" />
 <meta name="theme-color" content="#ffffff" />
 <meta name="generator" content={Astro.generator} />
 <!-- Primary Meta Tags -->
