Fixed "Serves images with low resolution" by implementing responsive images. This ensures images are displayed at the optimal size and clarity for different devices and screen resolutions.

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -10,7 +10,7 @@ import { Image } from "astro:assets";
 			<h1 id="title">Ralph Modejski</h1>
 			<figure class="img-caption">
 				<Image
-					src={"/tribute-to-Ralph-Modejski/images/Rudolf.Modrzejewski.1931.jpg"}
+					src={"/tribute-to-Ralph-Modejski/images/Ralph.modrzejewski.png"}
 					alt={"Rudolf Modrzejewski w 1931 roku"}
 					width={390}
 					height={495}
