Reduced image dimensions (width and height) for faster loading. Additionally, compressed the image and converted it to WebP format for further size reduction

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -10,10 +10,10 @@ import { Image } from "astro:assets";
 			<h1 id="title">Ralph Modejski</h1>
 			<figure class="img-caption">
 				<Image
-					src={"/tribute-to-Ralph-Modejski/images/Ralph.modrzejewski.png"}
+					src={"/tribute-to-Ralph-Modejski/images/Ralph.modrzejewski.webp"}
 					alt={"Rudolf Modrzejewski w 1931 roku"}
-					width={390}
-					height={495}
+					width={200}
+					height={260}
 					loading="eager"
 					format="webp"
 					class=""
