Fixed missing base path for social media icons.

--- a/src/components/head/BaseHead.astro
+++ b/src/components/head/BaseHead.astro
@@ -24,7 +24,7 @@ const metaInfo = await getEntry( 'metaheadinfo', 'metainfo');
 	rel="icon"
 	type="image/png"
 	sizes="192x192"
-	href="/android-icon-192x192.png"
+	href="/tribute-to-Ralph-Modejski/android-icon-192x192.png"
 />
 <link rel="icon" type="image/png" sizes="32x32" href="/tribute-to-Ralph-Modejski/favicon-32x32.png" />
 <link rel="icon" type="image/png" sizes="96x96" href="/tribute-to-Ralph-Modejski/favicon-96x96.png" />
