--- a/src/components/core/Navigation.astro
+++ b/src/components/core/Navigation.astro
@@ -118,16 +118,13 @@ const pathname = new URL(Astro.request.url).pathname;
                                             import.meta.env.BASE_URL + link.slug
                                         }
                                         class={
-                                            import.meta.env.BASE_URL + link.slug === pathname
+                                            import.meta.env.BASE_URL + link.slug + "/"=== pathname
                                                 ? "topnav__link active"
                                                 : "topnav__link"
                                         }
                                     >
                                         {link.title}
                                     </a>
-                                    <div> {import.meta.env.BASE_URL}</div>
-                                    <div>{link.slug}</div>
-                                    <div>{pathname}</div>
                                 </li>
                             )),
                         )}
