--- a/src/components/core/Navigation.astro
+++ b/src/components/core/Navigation.astro
@@ -118,12 +118,16 @@ const pathname = new URL(Astro.request.url).pathname;
                                             import.meta.env.BASE_URL + link.slug
                                         }
                                         class={
-                                            import.meta.env.BASE_URL +
-                                                link.slug +
-                                                "/" ===
-                                            pathname
-                                                ? "active"
-                                                : ""
+                                            import.meta.env.BASE_URL === "/"
+                                                ? link.slug === pathname
+                                                    ? "active"
+                                                    : ""
+                                                : import.meta.env.BASE_URL +
+                                                        link.slug +
+                                                        "/" ===
+                                                    pathname
+                                                  ? "active"
+                                                  : ""
                                         }
                                     >
                                         {link.title}
