--- a/src/components/core/Navigation.astro
+++ b/src/components/core/Navigation.astro
@@ -132,6 +132,9 @@ const pathname = new URL(Astro.request.url).pathname;
                                     >
                                         {link.title}
                                     </a>
+                                    <div>{import.meta.env.BASE_URL}</div>
+                                    <div>{link.slug}</div>
+                                    <div>{pathname}</div>
                                 </li>
                             )),
                         )}
