--- a/src/components/core/Navigation.astro
+++ b/src/components/core/Navigation.astro
@@ -118,8 +118,8 @@ const pathname = new URL(Astro.request.url).pathname;
                                             import.meta.env.BASE_URL + link.slug
                                         }
                                         class={
-                                            import.meta.env.BASE_URL === "/"
-                                                ? link.slug === pathname
+                                            link.slug === "/"
+                                                ? import.meta.env.BASE_URL === pathname
                                                     ? "active"
                                                     : ""
                                                 : import.meta.env.BASE_URL +
@@ -132,9 +132,6 @@ const pathname = new URL(Astro.request.url).pathname;
                                     >
                                         {link.title}
                                     </a>
-                                    <div>{import.meta.env.BASE_URL}</div>
-                                    <div>{link.slug}</div>
-                                    <div>{pathname}</div>
                                 </li>
                             )),
                         )}
