--- a/src/components/core/Navigation.astro
+++ b/src/components/core/Navigation.astro
@@ -119,7 +119,8 @@ const pathname = new URL(Astro.request.url).pathname;
                                         }
                                         class={
                                             link.slug === "/"
-                                                ? import.meta.env.BASE_URL === pathname
+                                                ? import.meta.env.BASE_URL ===
+                                                  pathname
                                                     ? "active"
                                                     : ""
                                                 : import.meta.env.BASE_URL +
