--- a/src/pages/contact/info.astro
+++ b/src/pages/contact/info.astro
@@ -7,7 +7,7 @@ import Layout from "../../layouts/Page.astro";
     <Container>
         <div class="container">
             <div class="contact-section">
-                <h2>Contact Us</h2>
+                <h2>Contact Me</h2>
                 <p>
                     If you have any questions or need further information, feel
                     free to reach out to me via email.
