--- a/src/components/core/Footer.astro
+++ b/src/components/core/Footer.astro
@@ -72,7 +72,7 @@ const footerLink = await getCollection("footerlinks");
         --footer-bg: var(--theme-primary);
         --footer-color: var(--theme-on-primary);
         
-        background-color: var(--c-neutral-light-gray);
+        background-color: var(--c-active);
         color: var(--footer-color);
         border-top-left-radius: var(--theme-shape-radius);
         border-top-right-radius: var(--theme-shape-radius);
