--- a/src/pages/contact/info.astro
+++ b/src/pages/contact/info.astro
@@ -26,11 +26,11 @@ import Layout from "../../layouts/Page.astro";
         padding: 20px;
     }
     .contact-section {
-        background-color: #fff;
         padding: 20px;
     }
     .contact-section h2 {
         margin-top: 0;
+        color:var(--c-title);
     }
     .contact-section p {
         font-size: 1.2em;
@@ -39,8 +39,8 @@ import Layout from "../../layouts/Page.astro";
         display: inline-block;
         margin-top: 10px;
         padding: 10px 20px;
-        background-color: var(--c-info);
-        color: #fff;
+        background-color: var(--c-primary);
+        color: var(--c-info);
         text-decoration: none;
         border-radius: 5px;
     }
