--- a/src/pages/live/index.astro
+++ b/src/pages/live/index.astro
@@ -64,6 +64,7 @@ import Layout from "../../layouts/Page.astro";
     }
     .article-title {
         padding: 2em 0 2em 0;
+        color: var(--c-title);
         font-weight: bold;
         text-transform: uppercase;
         text-align: center;
