--- a/src/pages/projects/index.astro
+++ b/src/pages/projects/index.astro
@@ -44,6 +44,7 @@ const projects = await getCollection("projects");
     margin-bottom: 2rem;
     font-size: 2rem;
     text-align: center;
+    color:var(--c-title);
   }
 
   .heading-text span {
