--- a/src/styles/_global.scss
+++ b/src/styles/_global.scss
@@ -4,34 +4,38 @@
 
 
 :root {
-    --c-primary-moderate-violet: hsl(263, 55%, 52%);
-    --c-primary-very-dark-grayish-blue: hsl(0, 12%, 92%);;
-    --c-primary-very-dark-blackish-blue: hsl(219, 29%, 14%);
-    --c-primary-white: hsl(0, 0%, 100%);
+    --c-primary: hsl(263, 55%, 52%);
+    --c-dark-blue: hsl(0, 12%, 92%);
+    --c-black-blue: hsl(219, 29%, 14%);
 
-    --c-neutral-light-gray: hsl(0, 0%, 81%);
-    --c-neutral-light-grayish-blue: hsl(210, 46%, 95%);
+    --c-title: hsl(263, 55%, 52%);
+    --c-text: #666;
+    --c-active: rgb(220, 220, 220);
+    --c-info: #dfe0e5;
+    --c-secondary-info: rgb(96, 76, 195);
 
-    --c-info:#007bff;
-    --c-dark-info: #0056b3;
-    --c-title:#333;
-    --c-text:#666;
-    --c-active: #dfe0e5;
+
+    --c-primary-background: hsl(0, 0, 95%);
+    --c-secondary-background: rgb(191, 224, 241);
+    --c-primary-text: #333;
+
 
     --f-l: #{clamp(u.rem(22), 1.2869718309859155rem + 0.3755868544600939vw, u.rem(36))};
-    --f-body: #{u.rem(14)};
+    --f-body: #{u.rem(16)};
 }
 
 body {
+    background-color: var(--c-primary-background);
     margin: 0 auto;
     font-family: "Barlow Semi Condensed", sans-serif;
     font-size: var(--f-body);
     scroll-behavior: smooth;
     text-rendering: optimizeSpeed;
-    color: var( --c-primary-very-dark-blackish-blue);
+    color: var(--c-primary-text);
     line-height: 1.6;
     min-height: 100vh;
     min-height: 100dvh;
+
 }
 
 a {
