--- a/src/components/core/Navigation.astro
+++ b/src/components/core/Navigation.astro
@@ -161,21 +161,22 @@ const pathname = new URL(Astro.request.url).pathname;
             transition: transform 750ms;
             will-change: transform;
 
+
             a:is(:focus, :hover) {
                 transform: translateY(-0.5rem);
-                background: var(--c-active);
                 overflow: hidden;
-                border-top: 2px solid var(--c-primary-moderate-violet);
+                border-top: 2px solid var( --c-primary);
                 padding-block: 0.5rem 0.5rem;
+                border-radius: 0.5em;
                 @media (width < 40em) {
-                    border-top: 4px solid var(--c-primary-moderate-violet);
+                    border-top: 4px solid var( --c-primary);
                 }
             }
 
             .active {
                 background: var(--c-active);
                 overflow: hidden;
-                border-top: 8px solid var(--c-primary-moderate-violet);
+                border-top: 8px solid var(--c-secondary-info);
                 padding: 0.5rem 0.75rem;
             }
 
@@ -197,7 +198,7 @@ const pathname = new URL(Astro.request.url).pathname;
                 position: fixed;
                 inset: 0;
                 padding: 1.5rem;
-                background-color: var(--c-neutral-light-gray);
+                background-color: var(--c-secondary-background);
                 translate: 100vw 0;
                 transition: translate 0.5s ease-in-out;
                 z-index: 100;
