--- a/src/pages/side-notes/index.astro
+++ b/src/pages/side-notes/index.astro
@@ -36,6 +36,7 @@ import Layout from "../../layouts/Page.astro";
     }
     .article-title {
         padding: 2em 0 2em 0;
+        color:var(--c-title);
         font-weight: bold;
         text-transform: uppercase;
         text-align: center;
