Feat: Improve design by adding bottom border radius

--- a/src/components/core/Navigation.astro
+++ b/src/components/core/Navigation.astro
@@ -178,6 +178,7 @@ const pathname = new URL(Astro.request.url).pathname;
                 overflow: hidden;
                 border-top: 8px solid var(--c-secondary-info);
                 padding: 0.5rem 0.75rem;
+                border-radius: 0.5em 0.5em 0em 0em; 
             }
 
             @media (width < 40em) {
