fix: change logo element from p to span for W3C compliance
Resolves #44

--- a/src/components/Logo.astro
+++ b/src/components/Logo.astro
@@ -2,7 +2,7 @@
 
 ---
 
-<p class="tribute-logo">Tribute</p>
+<span class="tribute-logo">Tribute</span>
 
 <style lang="scss">
 	@use "../styles/utils" as u;
